--- a/android/build.gradle
+++ b/android/build.gradle
@@ -7,7 +7,9 @@ buildscript {
 
     dependencies {
         classpath 'com.android.tools.build:gradle:7.1.2'
+        classpath 'com.google.gms:google-services:4.3.13'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+
     }
 }
 
@@ -15,6 +17,12 @@ allprojects {
     repositories {
         google()
         mavenCentral()
+        flatDir
+                {
+                    dirs project(':unityLibrary').file('libs')
+                }
+
+
     }
 }
 
