--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -7,7 +7,7 @@
     <uses-permission android:name="android.permission.VIBRATE" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
    <application
-        android:label="rjwada"
+        android:label="Rjwada"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
