--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   http: ^0.13.5
   image_cropper: ^3.0.0
   flutter_image_compress: ^1.1.2
+  animated_splash_screen: ^1.3.0
 
   firebase_core: ^1.21.1
   intl_phone_field: ^3.1.0
@@ -29,6 +30,16 @@ dependencies:
   overlay_support: ^2.0.1
   flutter_unity_widget: ^2022.2.0
   pointer_interceptor: ^0.9.3+2
+  shared_preferences: ^2.0.15
+  google_sign_in: ^5.4.0
+  flutter_signin_button: ^2.0.0
+  cool_alert: ^1.1.0
+
+flutter_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/images/splash.jpeg"
+  min_sdk_android: 21
 
 
 
@@ -37,4 +48,10 @@ dev_dependencies:
   flutter_lints: ^2.0.1
 
 
-flutter: {uses-material-design: true}
+
+flutter:
+
+ uses-material-design: true
+
+ assets:
+    - assets/images/
